--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pecsitonic | Web Oficial</title>
 
   <meta name="theme-color" content="#07141d" />
-  <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="estilos2.css" />
 
   <!-- Fuente -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
