--- a/sobremi.html
+++ b/sobremi.html
@@ -51,10 +51,10 @@
   </div>
 
   <nav class="nav" id="mainNav">
-    <a href="index.html#inicio" class="nav-link">Inicio</a>
+    <a href="index2.html#inicio" class="nav-link">Inicio</a>
     <a href="sobremi.html" class="nav-link active">Sobre mí</a>
     <a href="hytale.html" class="nav-link">Hytale</a>
-    <a href="index.html#proyectos" class="nav-link">Contacto</a>
+    <a href="index2.html#proyectos" class="nav-link">Contacto</a>
   </nav>
 
   <button class="nav-toggle" id="navToggle" aria-label="Abrir menú" aria-expanded="false">
